--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </header>
-    <main class="content">
+    <main>
         <div class="section-content-one">
             <div class="section-text-one">
 
