--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                 </div>
             </div>
-
+           </div>
     </main>
     <footer class="section-content-footer">
         <div class="footer-subject">
